prevent horizontal scroll in person page

--- a/assets/sass/communicationpublique-theme/styles/header.sass
+++ b/assets/sass/communicationpublique-theme/styles/header.sass
@@ -87,6 +87,7 @@ header#document-header
                     &,
                     &:hover
                         text-decoration: none
+                a[title="Contact - lien externe"],
                 a[title="Contact"]
                     @include hover-gray
                     @include media-breakpoint-up(desktop)
