--- a/assets/sass/communicationpublique-theme/styles/layout.sass
+++ b/assets/sass/communicationpublique-theme/styles/layout.sass
@@ -35,7 +35,7 @@ h1, .h1, h3, .h3, h4, .h4, h5, .h5, h6, .h6, .lead
         width: 100%
 
 // Links external icons and animation on hover
-header#document-header nav:not(.upper-menu),
+header#document-header .primary-menu .nav-level-2,
 footer#document-footer,
 .contacts-details,
 .block:not(.block-contact),
